# Banking-App

./: .gitignore  pyproject.toml  vercel.json  verify_password_fix.py
api/: auth.py  index.py
backend/: auth.py  database.py  main.py  verify_api.py  verify_live_api.py
frontend/static/: index.html  script.js  style.css
